--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "api-gateway",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "GraphQL API Gateway",
+  "author": "Francis Masha <francismasha96@gmail.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -13,59 +13,87 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint --max-warnings=0 '{src,__tests__}/**/*.ts'",
+    "lint:fix": "eslint --fix '{src,__tests__}/**/*.ts'",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "generate:typings": "ts-node ./src/graphql/generate-typings",
+    "copy:protos": "cpy ../_proto ./src/"
   },
   "dependencies": {
-    "@nestjs/common": "^8.0.0",
-    "@nestjs/core": "^8.0.0",
-    "@nestjs/platform-express": "^8.0.0",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "@grpc/grpc-js": "^1.6.7",
+    "@grpc/proto-loader": "0.6.9",
+    "@nestjs/apollo": "^10.0.9",
+    "@nestjs/common": "8.4.4",
+    "@nestjs/config": "2.0.0",
+    "@nestjs/core": "8.4.4",
+    "@nestjs/graphql": "10.0.10",
+    "@nestjs/jwt": "8.0.0",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/microservices": "8.4.4",
+    "@nestjs/passport": "8.2.1",
+    "@nestjs/platform-express": "8.4.4",
+    "apollo-server-express": "3.6.7",
+    "bcryptjs": "2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
+    "cookie-parser": "1.4.6",
+    "csurf": "^1.11.0",
+    "graphql": "16.3.0",
+    "graphql-redis-subscriptions": "2.4.2",
+    "graphql-scalars": "1.17.0",
+    "graphql-subscriptions": "2.0.0",
+    "graphql-tools": "8.2.8",
+    "graphql-type-json": "0.3.2",
+    "grpc": "^1.24.11",
+    "helmet": "^5.0.2",
+    "ioredis": "^5.0.4",
+    "lodash": "4.17.21",
+    "nestjs-pino": "2.5.2",
+    "passport": "0.5.2",
+    "passport-jwt": "4.0.0",
+    "pino": "7.10.0",
+    "pino-http": "^6.6.0",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.0.0",
-    "@nestjs/schematics": "^8.0.0",
-    "@nestjs/testing": "^8.0.0",
-    "@types/express": "^4.17.13",
+    "@nestjs/cli": "8.2.5",
+    "@nestjs/schematics": "8.0.10",
+    "@nestjs/testing": "8.4.4",
+    "@types/bcryptjs": "2.4.2",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/faker": "6.6.8",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "27.4.1",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "^27.2.5",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.10.1",
-    "typescript": "^4.3.5"
+    "@types/lodash": "4.14.182",
+    "@types/node": "17.0.25",
+    "@types/passport-jwt": "3.0.6",
+    "@typescript-eslint/eslint-plugin": "5.20.0",
+    "@typescript-eslint/parser": "5.20.0",
+    "cpy-cli": "4.1.0",
+    "eslint": "8.14.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "26.1.5",
+    "eslint-plugin-prettier": "4.0.0",
+    "faker": "6.6.6",
+    "jest": "27.5.1",
+    "jest-extended": "2.0.0",
+    "pino-pretty": "7.6.1",
+    "prettier": "2.6.2",
+    "rimraf": "3.0.2",
+    "ts-jest": "27.1.4",
+    "ts-morph": "^14.0.0",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+  "keywords": [
+    "graphql",
+    "grpc"
+  ],
+  "packageManager": "yarn@3.2.0"
 }
