--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "generate:typings": "ts-node ./src/graphql/generate-typings",
+    "generate:typings": "ts-node src/graphql/generate-typings",
     "copy:protos": "cpy ../_proto ./src/"
   },
   "dependencies": {
@@ -36,6 +36,7 @@
     "@nestjs/microservices": "8.4.4",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-express": "8.4.4",
+    "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-express": "3.6.7",
     "bcryptjs": "2.4.3",
     "class-transformer": "^0.5.1",
@@ -47,7 +48,7 @@
     "graphql-scalars": "1.17.0",
     "graphql-subscriptions": "2.0.0",
     "graphql-tools": "8.2.8",
-    "graphql-type-json": "0.3.2",
+    "graphql-type-json": "^0.3.2",
     "grpc": "^1.24.11",
     "helmet": "^5.0.2",
     "ioredis": "^5.0.4",
