feat: add device module and graphql files

--- a/package.json
+++ b/package.json
@@ -43,12 +43,13 @@
     "class-validator": "^0.13.2",
     "cookie-parser": "1.4.6",
     "csurf": "^1.11.0",
-    "graphql": "16.3.0",
+    "graphql": "16.4.0",
     "graphql-redis-subscriptions": "2.4.2",
     "graphql-scalars": "1.17.0",
     "graphql-subscriptions": "2.0.0",
     "graphql-tools": "8.2.8",
     "graphql-type-json": "^0.3.2",
+    "graphql-ws": "^5.8.1",
     "grpc": "^1.24.11",
     "helmet": "^5.0.2",
     "ioredis": "^5.0.4",
@@ -56,7 +57,7 @@
     "nestjs-pino": "2.5.2",
     "passport": "0.5.2",
     "passport-jwt": "4.0.0",
-    "pino": "7.10.0",
+    "pino": "7.11.0",
     "pino-http": "^6.6.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5"
@@ -66,15 +67,15 @@
     "@nestjs/schematics": "8.0.10",
     "@nestjs/testing": "8.4.4",
     "@types/bcryptjs": "2.4.2",
-    "@types/cookie-parser": "^1.4.2",
+    "@types/cookie-parser": "^1.4.3",
     "@types/faker": "6.6.8",
     "@types/ioredis": "^4.28.10",
     "@types/jest": "27.4.1",
     "@types/lodash": "4.14.182",
-    "@types/node": "17.0.25",
+    "@types/node": "17.0.29",
     "@types/passport-jwt": "3.0.6",
-    "@typescript-eslint/eslint-plugin": "5.20.0",
-    "@typescript-eslint/parser": "5.20.0",
+    "@typescript-eslint/eslint-plugin": "5.21.0",
+    "@typescript-eslint/parser": "5.21.0",
     "cpy-cli": "4.1.0",
     "eslint": "8.14.0",
     "eslint-config-prettier": "8.5.0",
@@ -82,7 +83,7 @@
     "eslint-plugin-jest": "26.1.5",
     "eslint-plugin-prettier": "4.0.0",
     "faker": "6.6.6",
-    "jest": "27.5.1",
+    "jest": "28.0.2",
     "jest-extended": "2.0.0",
     "pino-pretty": "7.6.1",
     "prettier": "2.6.2",
