--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "0.6.9",
     "@nestjs/apollo": "^10.0.9",
+    "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "8.4.4",
     "@nestjs/config": "2.0.0",
     "@nestjs/core": "8.4.4",
@@ -36,6 +37,8 @@
     "@nestjs/microservices": "8.4.4",
     "@nestjs/passport": "8.2.1",
     "@nestjs/platform-express": "8.4.4",
+    "@nestjs/schedule": "^1.1.0",
+    "@nestjs/terminus": "^8.0.6",
     "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-express": "3.6.7",
     "bcryptjs": "2.4.3",
