--- a/package.json
+++ b/package.json
@@ -21,17 +21,17 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "generate:typings": "ts-node src/graphql/generate-typings",
-    "copy:protos": "cpy ../_proto ./src/"
+    "copy:protos": "cpy ../../_proto ./src"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
-    "@grpc/proto-loader": "0.6.9",
-    "@nestjs/apollo": "^10.0.9",
+    "@grpc/proto-loader": "0.6.12",
+    "@nestjs/apollo": "^10.0.11",
     "@nestjs/axios": "^0.0.7",
     "@nestjs/common": "8.4.4",
     "@nestjs/config": "2.0.0",
     "@nestjs/core": "8.4.4",
-    "@nestjs/graphql": "10.0.10",
+    "@nestjs/graphql": "10.0.11",
     "@nestjs/jwt": "8.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/microservices": "8.4.4",
@@ -40,17 +40,20 @@
     "@nestjs/schedule": "^1.1.0",
     "@nestjs/terminus": "^8.0.6",
     "apollo-server-cache-redis": "^3.3.1",
-    "apollo-server-express": "3.6.7",
+    "apollo-server-express": "3.7.0",
+    "axios": "^0.27.2",
     "bcryptjs": "2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "1.4.6",
     "csurf": "^1.11.0",
-    "graphql": "16.4.0",
+    "dotenv": "^16.0.1",
+    "googleapis": "^100.0.0",
+    "graphql": "16.5.0",
     "graphql-redis-subscriptions": "2.4.2",
     "graphql-scalars": "1.17.0",
     "graphql-subscriptions": "2.0.0",
-    "graphql-tools": "8.2.8",
+    "graphql-tools": "8.2.9",
     "graphql-type-json": "^0.3.2",
     "graphql-ws": "^5.8.1",
     "grpc": "^1.24.11",
@@ -61,40 +64,40 @@
     "passport": "0.5.2",
     "passport-jwt": "4.0.0",
     "pino": "7.11.0",
-    "pino-http": "^6.6.0",
+    "pino-http": "^7.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.5",
-    "@nestjs/schematics": "8.0.10",
+    "@nestjs/schematics": "8.0.11",
     "@nestjs/testing": "8.4.4",
     "@types/bcryptjs": "2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/faker": "6.6.8",
     "@types/ioredis": "^4.28.10",
-    "@types/jest": "27.4.1",
+    "@types/jest": "27.5.1",
     "@types/lodash": "4.14.182",
-    "@types/node": "17.0.29",
+    "@types/node": "17.0.32",
     "@types/passport-jwt": "3.0.6",
-    "@typescript-eslint/eslint-plugin": "5.21.0",
-    "@typescript-eslint/parser": "5.21.0",
+    "@typescript-eslint/eslint-plugin": "5.23.0",
+    "@typescript-eslint/parser": "5.23.0",
     "cpy-cli": "4.1.0",
-    "eslint": "8.14.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "26.1.5",
     "eslint-plugin-prettier": "4.0.0",
     "faker": "6.6.6",
-    "jest": "28.0.2",
+    "jest": "28.1.0",
     "jest-extended": "2.0.0",
     "pino-pretty": "7.6.1",
     "prettier": "2.6.2",
     "rimraf": "3.0.2",
-    "ts-jest": "27.1.4",
+    "ts-jest": "28.0.2",
     "ts-morph": "^14.0.0",
     "ts-node": "10.7.0",
-    "typescript": "4.6.3"
+    "typescript": "4.6.4"
   },
   "keywords": [
     "graphql",
