--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,8 @@
 	"printWidth": 79,
 	"tabWidth": 2,
 	"useTabs": true,
-	"endOfLine": "auto"
+	"endOfLine": "auto",
+  "importOrder": ["^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
