--- a/package.json
+++ b/package.json
@@ -26,21 +26,21 @@
   "dependencies": {
     "@grpc/grpc-js": "^1.6.7",
     "@grpc/proto-loader": "0.6.12",
-    "@nestjs/apollo": "^10.0.12",
+    "@nestjs/apollo": "^10.0.14",
     "@nestjs/axios": "^0.0.8",
-    "@nestjs/common": "8.4.5",
-    "@nestjs/config": "2.0.1",
-    "@nestjs/core": "8.4.5",
-    "@nestjs/graphql": "10.0.12",
+    "@nestjs/common": "8.4.6",
+    "@nestjs/config": "2.1.0",
+    "@nestjs/core": "8.4.6",
+    "@nestjs/graphql": "10.0.15",
     "@nestjs/jwt": "8.0.1",
     "@nestjs/mapped-types": "*",
-    "@nestjs/microservices": "8.4.5",
+    "@nestjs/microservices": "8.4.6",
     "@nestjs/passport": "8.2.1",
-    "@nestjs/platform-express": "8.4.5",
+    "@nestjs/platform-express": "8.4.6",
     "@nestjs/schedule": "^2.0.1",
     "@nestjs/terminus": "^8.0.6",
     "apollo-server-cache-redis": "^3.3.1",
-    "apollo-server-express": "3.7.0",
+    "apollo-server-express": "3.8.1",
     "axios": "^0.27.2",
     "bcryptjs": "2.4.3",
     "class-transformer": "^0.5.1",
@@ -58,50 +58,58 @@
     "graphql-ws": "^5.8.2",
     "grpc": "^1.24.11",
     "helmet": "^5.1.0",
-    "ioredis": "^5.0.5",
+    "ioredis": "^5.0.6",
     "lodash": "4.17.21",
-    "nestjs-pino": "2.5.2",
+    "nestjs-pino": "2.6.0",
     "passport": "0.6.0",
     "passport-jwt": "4.0.0",
-    "pino": "7.11.0",
-    "pino-http": "^7.0.0",
+    "pino": "8.0.0",
+    "pino-http": "^7.1.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.5.5"
   },
   "devDependencies": {
     "@nestjs/cli": "8.2.6",
     "@nestjs/schematics": "8.0.11",
-    "@nestjs/testing": "8.4.5",
+    "@nestjs/testing": "8.4.6",
     "@types/bcryptjs": "2.4.2",
     "@types/cookie-parser": "^1.4.3",
     "@types/faker": "6.6.8",
     "@types/ioredis": "^4.28.10",
-    "@types/jest": "27.5.1",
+    "@types/jest": "28.1.0",
     "@types/lodash": "4.14.182",
-    "@types/node": "17.0.35",
+    "@types/node": "17.0.38",
     "@types/passport-jwt": "3.0.6",
-    "@typescript-eslint/eslint-plugin": "5.25.0",
-    "@typescript-eslint/parser": "5.25.0",
+    "@typescript-eslint/eslint-plugin": "5.27.0",
+    "@typescript-eslint/parser": "5.27.0",
     "cpy-cli": "4.1.0",
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jest": "26.2.2",
+    "eslint-plugin-jest": "26.4.6",
     "eslint-plugin-prettier": "4.0.0",
     "faker": "6.6.6",
+    "import-sort-style-module": "^6.0.0",
     "jest": "28.1.0",
     "jest-extended": "2.0.0",
-    "pino-pretty": "7.6.1",
+    "pino-pretty": "8.0.0",
     "prettier": "2.6.2",
+    "prettier-plugin-import-sort": "^0.0.7",
     "rimraf": "3.0.2",
-    "ts-jest": "28.0.2",
-    "ts-morph": "^14.0.0",
-    "ts-node": "10.7.0",
-    "typescript": "4.6.4"
+    "ts-jest": "28.0.3",
+    "ts-morph": "^15.0.0",
+    "ts-node": "10.8.0",
+    "typescript": "4.7.2"
   },
   "keywords": [
     "graphql",
     "grpc"
   ],
-  "packageManager": "yarn@3.2.0"
+  "packageManager": "yarn@3.2.1",
+  "importSort": {
+    ".js, .jsx, .ts, .tsx": {
+      "style": "module",
+      "parser": "typescript"
+    }
+  }
 }
